@@ -1,7 +1,8 @@
 1.5.11:
+	Allow regex with # in the configuration (Hajimu Umemoto)
 	Ingore self as sync peer (Matthias Scheler and Hajimu Umemoto)
 	Document ressource shortage for memory and file descriptor
-	Remove oudated documentation about IPv6
+	Remove outdated documentation about IPv6
 1.5.10:
 	Fix a build problem on systems that don't have IPv6 (Hajimu Umemoto)
 	Fix a minor bug with SPF (Hajimu Umemoto)
